--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Website Saya</title>
+</head>
+<style>
+body{
+    font-family:"Roboto",sans-serif;
+}
+</style>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1 id="home">Website Saya</h1>
+    <p>Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.</p>
+    <p>Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap.</p>
+    <p>Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan</p>
+    <p><b>Link program:</b></p>
+    <ul>
+        <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> (New) - Version 1.2</li>
+        <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> (New) - Version 1.1</li>
+        <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> (New) - Version 1.3.1</li>
+        <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
+        <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
+        <li><a href="https://devandaniel9-equation-solver3-app-7pbibt.streamlit.app/">Equation Solver</a> - Version 1.1</li>
+        <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
+    </ul>
+    <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p>
+    <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti</p>
+    <p><b>Link yang akan datang:</b></p>
+    <ul>
+        <li>Transformasi (Python)</li>
+        <li>Pengukur (Python)</li>
+        <li>Sejarah (HTML)</li>
+        <li>Gambar (HTML)</li>
+    </ul>
+    <p><b>Link luar:</b></p>
+    <ul>
+        <li><a href="https://www.python.org/">Website Python</a></li>
+        <li><a href="https://www.w3schools.com/">Belajar HTML</a></li>
+    </ul>
+    <h3>Link:</h3>
+    <p>
+        Home |
+        <a href="profil.html" >Profil</a> |
+        <a href="about.html" >About</a>
+    </p>
+    <p>[Coming Soon]</p>
+    <br>
+    <a href="#home">Kembali ke awal</a>
+    <p>Terakhir diupdate: 8 April 2023</p>
+    <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
