--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ body{
     <p>Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.</p>
     <p>Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap.</p>
     <p>Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan</p>
-    <p style="color:#404080;"><b>Link program:</b></p>
+    <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.3.</p>
+    <p style="color:#000080;"><b>Link program:</b></p>
     <ul>
         <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> (New) - Version 1.2</li>
         <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> (New) - Version 1.1</li>
@@ -25,7 +26,7 @@ body{
     </ul>
     <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p>
     <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti</p>
-    <p style="color:#404080;"><b>Link yang akan datang:</b></p>
+    <p style="color:#000080;"><b>Link yang akan datang:</b></p>
     <ul>
         <li>Transformasi (Python)</li>
         <li>Pengukur (Python)</li>
@@ -34,7 +35,7 @@ body{
         <li>Pelajaran (HTML & Python)</li>
         <li>Bangun 3 Dimensi (Python)</li>
     </ul>
-    <p style="color:#404080;"><b>Link luar:</b></p>
+    <p style="color:#000080;"><b>Link luar:</b></p>
     <ul>
         <li><a href="https://www.python.org/">Website Python</a> - Bisa Download Python!</li>
         <li><a href="https://www.geeksforgeeks.org/">Belajar Python</a></li>
