--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Website Saya</title>
 </head>
 <style>
-body{
-    font-family:"Roboto",sans-serif;
+body {
+    background-color: #c0d0f8;
+    font-family: "Roboto", sans-serif;
 }
 </style>
 <body>
@@ -16,12 +17,13 @@ body{
     <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.3.</p>
     <p style="color:#000080;"><b>Link program:</b></p>
     <ul>
+        <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.3</li>
         <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> (New) - Version 1.2</li>
-        <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> (New) - Version 1.1</li>
-        <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> (New) - Version 1.3.1</li>
+        <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
+        <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.3.1</li>
         <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
         <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
-        <li><a href="https://devandaniel9-equation-solver3-app-7pbibt.streamlit.app/">Equation Solver</a> - Version 1.1</li>
+        <li><a href="https://devandaniel9-equation-solver3-app-7pbibt.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
         <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
     </ul>
     <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p>
@@ -34,6 +36,8 @@ body{
         <li>Gambar (HTML)</li>
         <li>Pelajaran (HTML & Python)</li>
         <li>Bangun 3 Dimensi (Python)</li>
+        <li>Labirin / Maze (HTML & Python)</li>
+        <li>Portofolio (HTML)</li>
     </ul>
     <p style="color:#000080;"><b>Link luar:</b></p>
     <ul>
@@ -44,13 +48,14 @@ body{
     <h3>Link:</h3>
     <p>
         Home |
-        <a href="profil.html" >Profil</a> |
-        <a href="about.html" >About</a>
+        <a href="profil.html">Profil</a> |
+        <a href="about.html">About</a> |
+        Sejarah (Coming Soon)
     </p>
     <p>[Coming Soon]</p>
     <br>
     <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 14 April 2023</p>
+    <p>Terakhir diupdate: 17 April 2023</p>
     <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
