--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <style>
 body {
-    background-color: #c0d0f8;
+    background-color: #d0e0f8;
     font-family: "Roboto", sans-serif;
 }
 </style>
