--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
     <p>Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.</p>
     <p>Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap.</p>
     <p>Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan</p>
-    <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.3.</p>
+    <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.4.</p>
     <p style="color:#000080;"><b>Link program:</b></p>
     <ul>
         <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.3</li>
@@ -23,11 +23,11 @@ body {
         <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.3.1</li>
         <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
         <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
-        <li><a href="https://devandaniel9-equation-solver3-app-7pbibt.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
+        <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
         <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
     </ul>
     <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p>
-    <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti</p>
+    <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
     <p style="color:#000080;"><b>Link yang akan datang:</b></p>
     <ul>
         <li>Transformasi (Python)</li>
