--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <title>Website Saya</title>
 </head>
 <style>
-body {
-    background-color: #d0e0f8;
-    font-family: "Roboto", sans-serif;
-}
+    body {
+        background-color: #d0e0f8;
+        font-family: "Roboto", sans-serif;
+    }
 </style>
 <body>
-    <h1 id="home">Website Saya</h1>
+    <h1 id="home">Website Devan</h1>
     <p>Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.</p>
-    <p>Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap.</p>
+    <p>Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.</p>
     <p>Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan</p>
     <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.4.</p>
     <p style="color:#000080;"><b>Link program:</b></p>
     <ul>
-        <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.3</li>
+        <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
         <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> (New) - Version 1.2</li>
         <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
-        <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.3.1</li>
+        <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.4</li>
         <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
         <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
         <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
@@ -55,7 +55,7 @@ body {
     <p>[Coming Soon]</p>
     <br>
     <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 17 April 2023</p>
+    <p>Terakhir diupdate: 21 April 2023</p>
     <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
