--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <p>Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.</p>
     <p>Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.</p>
     <p>Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan</p>
-    <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.4.</p>
+    <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.5.</p>
     <p style="color:#000080;"><b>Link program:</b></p>
     <ul>
         <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
-        <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> (New) - Version 1.2</li>
+        <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
         <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
         <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.4</li>
         <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
@@ -30,14 +30,15 @@
     <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
     <p style="color:#000080;"><b>Link yang akan datang:</b></p>
     <ul>
-        <li>Transformasi (Python)</li>
-        <li>Pengukur (Python)</li>
+        <li>Transformasi (Python) - Ada di program Geometri</li>
+        <li>Pengukur (Python) - Sedang Dibuat</li>
         <li>Sejarah (HTML)</li>
         <li>Gambar (HTML)</li>
         <li>Pelajaran (HTML & Python)</li>
         <li>Bangun 3 Dimensi (Python)</li>
         <li>Labirin / Maze (HTML & Python)</li>
         <li>Portofolio (HTML)</li>
+        <li>Explore (HTML & Python)</li>
     </ul>
     <p style="color:#000080;"><b>Link luar:</b></p>
     <ul>
@@ -55,7 +56,7 @@
     <p>[Coming Soon]</p>
     <br>
     <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 21 April 2023</p>
+    <p>Terakhir diupdate: 28 April 2023</p>
     <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
