--- a/profil.html
+++ b/profil.html
@@ -12,7 +12,7 @@ body{
     <h1>Profil</h1>
     <h3>Biodata</h3>
     <p>Nama: *****</p>
-    <p>Tanggal: **/**/****</p>
+    <p>Tanggal lahir: **/**/****</p>
     <h3>Kesukaan</h3>
     <p>Buka aplikasi VS Code</p>
     <p>Mengerjakan program</p>
@@ -20,5 +20,6 @@ body{
     <h3>Nama</h3>
     <p>Username: dev*nd****l9</p>
     <p>Kembali ke: <a href="index.html">Menu Utama</a></p>
+    <p>Terakhir diupdate: 28 April 2023</p>
 </body>
 </html>
