--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
         Home |
         <a href="profil.html">Profil</a> |
         <a href="about.html">About</a> |
+        <a href="blog.html">Blog</a> |
         Sejarah (Coming Soon)
     </p>
     <p>[Coming Soon]</p>
     <br>
     <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 11 Mei 2023</p>
+    <p>Terakhir diupdate: 1 Agustus 2023</p>
     <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
