--- a/blog.html
+++ b/blog.html
@@ -34,16 +34,16 @@
         </div>
         <div class="text">
             <p>
-            First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the Batu Malang square. The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there. Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo. At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise. The trip from the hotel to Bromo is quite far and takes as much as …. o'clock. We got there at exactly 4am and the weather was very, very cold. Our first destination was the Peak of Mount Bromo. The view is amazing, I can see 3 Bromo mountains and the sunrise. After that, we went to the next destination, namely Whispering Sand. There we took a lot of photos. And our last destination is Teletubbies Hill. When it was noon we went back to town and had lunch there.
+            First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square. The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there. Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo. At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise. The trip from the hotel to Bromo is quite far and takes as much as …. o'clock. We got there at exactly 4am and the weather was very, very cold. Our first destination was the Peak of Mount Bromo. The view is amazing, I can see 3 Bromo mountains and the sunrise. After that, we went to the next destination, namely Whispering Sand. There we took a lot of photos. And our last destination is Teletubbies Hill. When it was noon we went back to town and had lunch there.
             Actually my family and I were very tired because of the trip but the beautiful scenery we saw was really worth it. It's an unforgettable experience
             <br><br>
             After walking for a while and buying souvenirs in the city of Malang, we returned to Semarang
             </p>
-            <p>Kembali ke: <a href="index.html">Menu Utama</a></p>
-            <p>Terakhir diupdate: 1 Agustus 2023</p>
         </div>
     </div>
     <p style="font-size: 25px"><b>2. Holiday to Bali</b></font>
     <p style="font-size: 25px"><b>3. Descriptive Text</b></font>
+    <p>Kembali ke: <a href="index.html">Menu Utama</a></p>
+    <p>Terakhir diupdate: 1 Agustus 2023</p>
 </body>
 </html>
