--- a/blog.html
+++ b/blog.html
@@ -17,11 +17,24 @@
         float: left;
         margin: 10px;
     } */
+    .row {
+        display: flex;
+    }
+
+    .column {
+        flex: 50%;
+    }
+
 </style>
 <body>
     <font size="6" color="#002080"><b>BLOG DAN CERITA</b></font>
-    <p style="font-size: 22px">Cerita dan pengalaman yang pernah dirasakan</p>
-    <p style="font-size: 25px"><b>1. Holiday to Bromo</b></font>
+    <p style="font-size: 22px">
+        Cerita dan pengalaman saya yang pernah dirasakan.<br>
+        Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
+        Inilah beberapa cerita yang ada di blog ini.
+    </p>
+    </details>
+    <p style="font-size: 25px"><b>1. Holiday to Bromo</b></p>
     <div class="container">
         <p>
         Dengan tulisan bahasa Inggris
@@ -31,19 +44,72 @@
         </p>
         <div class="image">
             <img src="images/IMG_6228.JPG" width="300">
+            <!-- <details>
+                <summary>Klik disini</summary>
+            </details> -->
         </div>
-        <div class="text">
-            <p>
-            First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square. The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there. Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo. At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise. The trip from the hotel to Bromo is quite far and takes as much as …. o'clock. We got there at exactly 4am and the weather was very, very cold. Our first destination was the Peak of Mount Bromo. The view is amazing, I can see 3 Bromo mountains and the sunrise. After that, we went to the next destination, namely Whispering Sand. There we took a lot of photos. And our last destination is Teletubbies Hill. When it was noon we went back to town and had lunch there.
-            Actually my family and I were very tired because of the trip but the beautiful scenery we saw was really worth it. It's an unforgettable experience
-            <br><br>
-            After walking for a while and buying souvenirs in the city of Malang, we returned to Semarang
-            </p>
-        </div>
+        <!-- <div class="text"> -->
+        <p>
+        First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the **Batu Malang** square.
+        The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there.
+        Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo.
+        At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise.
+        The trip from the hotel to Bromo is quite far and takes as much as …. o'clock. We got there at exactly 4am and the weather was very, very cold.
+        Our first destination was the Peak of Mount Bromo. The view is amazing, I can see 3 Bromo mountains and the sunrise. After that, we went to the next destination, namely Whispering Sand.
+        There we took a lot of photos. And our last destination is Teletubbies Hill. When it was noon we went back to town and had lunch there.
+        <br><br>
+        Actually my family and I were very tired because of the trip but the beautiful scenery we saw was really worth it. It's an unforgettable experience.
+        <br><br>
+        After walking for a while and buying souvenirs in the city of Malang, we returned to Semarang.
+        <br><br>
+        <b>Catatan:</b><br>
+        <!-- <ul><li> -->
+        - Batu Malang: Kota di Jawa Timur<br>
+        - Kata Coach di Eagle School, nanti akan berencana untuk retreat di luar kota, dimana nanti akan pergi ke **Batu Malang**.
+        </p>
+        <br>
     </div>
-    <p style="font-size: 25px"><b>2. Holiday to Bali</b></font>
-    <p style="font-size: 25px"><b>3. Descriptive Text</b></font>
+    <p style="font-size: 25px"><b>2. Descriptive Text</b></p>
+    <div class="container">
+        <p>
+        Dengan tulisan bahasa Inggris
+        <br><br>
+        <b>Judul: Kurang tau</b>
+        <br>
+        </p>
+        <p>
+        My name is Devan. I am senior high school.
+        <br><br>
+        The subject I like the most is Mathematics. Since I was a kid, my math scores were the highest compared to the other subjects.
+        I have participated in many competitions. Competitions between schools, at the Mall, school's Open House and at the Olympic level.
+        Sometimes I win, sometimes I don't. The championship that was most memorable for me when I was in grade 5 elementary school, for the OSN level, I entered the semifinals;
+        and recently I won Olympic gold at the provincial level of Central Java and Jogja. This further broadens my horizons,
+        further motivates me to be even more active and diligent in practicing and participating in various competitions in order to improve my mathematical abilities.
+        <br><br>
+        Beside Math, I also like computer programs, namely python. Moreover, at Eagle School there is an IT talent class.
+        There I can apply my hobby regarding this computer program. I started making math programs. And those are my projects in the IT talent class.
+        Python is a coding programming language. Coding is very necessary and important in today's IT field. Everything uses coding.
+        For that, I really want to deepen my knowledge of coding, such as Python, HTML, and Javascript. Because later it will be needed now and in the future.
+        In the future, I will make projects other than math, such as my own portfolio and web.
+        <br><Br>
+        Apart from mathematics and IT, I also like to play piano. I have been taking piano lessons for 3 years. Several times from my piano lessons,
+        I held small concerts at the Semarang mall. This is one that made me bolder and memorize some of the songs I played. In my spare time at home,
+        I often play songs taught in piano lessons.
+        <br><br>
+        My hope is I would like to take part in competitions in mathematics, both at the city and national levels during my 3 years at this high school.
+        And also continue to deepen the capabilities of the Python program. Because at this time, Mathematics and python are related to each other.
+        My dream is to be a mathematician and programmer. Hopefully with the talent that God has given me, I can develop it with effort and of course only with God's help.            
+        </p>
+        <br>
+    </div>
+    <p style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
+    <p style="font-size: 25px"><b>4. Holiday to Bali</b></p>
+    <p style="font-size: 25px"><b>5. Holiday to Jakarta</b></p>
+    <p style="font-size: 25px"><b>6. Cerita tentang Talent</b></p>
+    <p style="font-size: 25px"><b>7. Masa depan dan impian</b></p>
+    <p style="font-size: 25px"><b>8. [Under Construction]</b></p>
+    <br>
     <p>Kembali ke: <a href="index.html">Menu Utama</a></p>
-    <p>Terakhir diupdate: 1 Agustus 2023</p>
+    <p>Terakhir diupdate: 3 Agustus 2023</p>
 </body>
 </html>
