--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,18 @@
         flex: 50%;
     }
 
+    /* .margin-left */
+    .container {
+        margin-left: 30px; /* Sesuaikan dengan nilai yang diinginkan */
+    }
+
+    .centered-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; /* Untuk mengisi seluruh tinggi viewport */
+    }
+
 </style>
 <body>
     <font size="6" color="#002080"><b>BLOG DAN CERITA</b></font>
@@ -50,7 +62,7 @@
         </div>
         <!-- <div class="text"> -->
         <p>
-        First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the **Batu Malang** square.
+        First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square.
         The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there.
         Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo.
         At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise.
@@ -65,20 +77,18 @@
         <b>Catatan:</b><br>
         <!-- <ul><li> -->
         - Batu Malang: Kota di Jawa Timur<br>
-        - Kata Coach di Eagle School, nanti akan berencana untuk retreat di luar kota, dimana nanti akan pergi ke **Batu Malang**.
+        - Kata Coach di Eagle School, nanti akan berencana untuk retreat di luar kota, dimana nanti akan pergi ke <b>Batu Malang</b>.
         </p>
         <br>
     </div>
-    <p style="font-size: 25px"><b>2. Descriptive Text</b></p>
+    <p style="font-size: 25px"><b>2. About Me Devan - Descriptive Text</b></p>
     <div class="container">
         <p>
         Dengan tulisan bahasa Inggris
         <br><br>
-        <b>Judul: Kurang tau</b>
-        <br>
-        </p>
-        <p>
-        My name is Devan. I am senior high school.
+        <b>Judul: About Me Devan</b>
+        <br><br<
+        My name is Devan. I am senior high school. I like Math Computer and music.
         <br><br>
         The subject I like the most is Mathematics. Since I was a kid, my math scores were the highest compared to the other subjects.
         I have participated in many competitions. Competitions between schools, at the Mall, school's Open House and at the Olympic level.
@@ -99,6 +109,8 @@
         My hope is I would like to take part in competitions in mathematics, both at the city and national levels during my 3 years at this high school.
         And also continue to deepen the capabilities of the Python program. Because at this time, Mathematics and python are related to each other.
         My dream is to be a mathematician and programmer. Hopefully with the talent that God has given me, I can develop it with effort and of course only with God's help.            
+        <br><Br>
+        Video: <a href="https://youtu.be/AeSeyrThOVs">About Me Devan</a>
         </p>
         <br>
     </div>
@@ -110,6 +122,6 @@
     <p style="font-size: 25px"><b>8. [Under Construction]</b></p>
     <br>
     <p>Kembali ke: <a href="index.html">Menu Utama</a></p>
-    <p>Terakhir diupdate: 3 Agustus 2023</p>
+    <p>Terakhir diupdate: 12 Agustus 2023</p>
 </body>
 </html>
