--- a/blog.html
+++ b/blog.html
@@ -7,16 +7,20 @@
     body {
         /* font-family:"Open Sans Black",sans-serif; */
         /* font-family:"Segoe UI Medium",sans-serif; */
-        /* font-family:"Open Sans",sans-serif; */
-        font-family:"Tahoma",sans-serif;
+        /* font-family:"Tahoma",sans-serif; */
+        /* font-family:"Source Sans Pro",sans-serif; */
+        /* font-family:"Georgia",sans-serif; */
+        font-family:"Open Sans",sans-serif;
+        background-color: #e0e8ff;
     }
     p {
         font-size: 20px
     }
-    /* img {
-        float: left;
-        margin: 10px;
-    } */
+    img {
+        /* float: left; */
+        margin: 2px;
+    }
+
     .row {
         display: flex;
     }
@@ -39,6 +43,7 @@
 
 </style>
 <body>
+    <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
     <font size="6" color="#002080"><b>BLOG DAN CERITA</b></font>
     <p style="font-size: 22px">
         Cerita dan pengalaman saya yang pernah dirasakan.<br>
@@ -56,12 +61,19 @@
         </p>
         <div class="image">
             <img src="images/IMG_6228.JPG" width="300">
+            <img src="images/IMG_6168.JPG" width="300">
             <!-- <details>
                 <summary>Klik disini</summary>
             </details> -->
         </div>
         <!-- <div class="text"> -->
         <p>
+        <font color="#000080">
+        Gambar 1: Pegunungan
+        <br>
+        Gambar 2: Matahari terbit
+        </font>
+        <br><br>
         First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square.
         The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there.
         Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo.
@@ -77,7 +89,7 @@
         <b>Catatan:</b><br>
         <!-- <ul><li> -->
         - Batu Malang: Kota di Jawa Timur<br>
-        - Kata Coach di Eagle School, nanti akan berencana untuk retreat di luar kota, dimana nanti akan pergi ke <b>Batu Malang</b>.
+        - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke luar kota, dimana nanti akan pergi ke <b>Batu Malang</b>.
         </p>
         <br>
     </div>
@@ -87,7 +99,7 @@
         Dengan tulisan bahasa Inggris
         <br><br>
         <b>Judul: About Me Devan</b>
-        <br><br<
+        <br><br>
         My name is Devan. I am senior high school. I like Math Computer and music.
         <br><br>
         The subject I like the most is Mathematics. Since I was a kid, my math scores were the highest compared to the other subjects.
@@ -109,19 +121,34 @@
         My hope is I would like to take part in competitions in mathematics, both at the city and national levels during my 3 years at this high school.
         And also continue to deepen the capabilities of the Python program. Because at this time, Mathematics and python are related to each other.
         My dream is to be a mathematician and programmer. Hopefully with the talent that God has given me, I can develop it with effort and of course only with God's help.            
-        <br><Br>
+        <br><br>
         Video: <a href="https://youtu.be/AeSeyrThOVs">About Me Devan</a>
         </p>
         <br>
     </div>
     <p style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
+    <div class="container">
+        <div class="image">
+            <img src="images/Sertifikat OSN.jpg" width="200">
+            <img src="images/Devan OSN 23.jpg" width="250">
+        </div>
+        <p>
+        Mata pelajaran yang paling saya sukai adalah Matematika. Sejak dari kecil nilai matematika saya yang paling tinggi dibanding mata pelajaran lain.
+        Banyak lomba yang sudah saya ikuti. Lomba antar sekolah baik itu di Mall, Open House Sekolah maupun tingkat Olimpiade. Kadang saya dapat juara terkadang juga tidak.
+        Itulah mengapa rajin les matematika sama guru matematika, agar semakin rajin dan giat belajar, sehingga bisa mendapatkan juara untuk berikutnya.
+        Kejuaraan yang paling berkesan buat saya, ketika SD kelas 5, untuk tingkat OSN, saya masuk semifinal; dan baru-baru ini, di bulan Maret 2023 saya mendapat emas Olimpiade tingkat provinsi Jawa Tengah dan Jogja.
+        Dan mendapatkan piagam dan medali emas, juara di tingkat emas bareng Guru Matematika disampingnya, sehingga akan difoto dan dikirim ke Instagram.
+        Hal itu, makin menambah wawasan saya, semakin memacu saya untuk lebih giat dan tekun lagi latihan dan mengikuti berbagai kompetisi supaya dapat meningkatkan kemampuan matematika saya.
+        </p>
+        <br>
+    </div>
     <p style="font-size: 25px"><b>4. Holiday to Bali</b></p>
-    <p style="font-size: 25px"><b>5. Holiday to Jakarta</b></p>
+    <p style="font-size: 25px"><b>5. Holiday to Jakarta & Bandung</b></p>
     <p style="font-size: 25px"><b>6. Cerita tentang Talent</b></p>
     <p style="font-size: 25px"><b>7. Masa depan dan impian</b></p>
     <p style="font-size: 25px"><b>8. [Under Construction]</b></p>
     <br>
     <p>Kembali ke: <a href="index.html">Menu Utama</a></p>
-    <p>Terakhir diupdate: 12 Agustus 2023</p>
+    <p>Terakhir diupdate: 13 Agustus 2023</p>
 </body>
 </html>
