--- a/index.html
+++ b/index.html
@@ -5,16 +5,33 @@
 </head>
 <style>
     body {
+        /* font-family:"Open Sans Black",sans-serif; */
+        /* font-family:"Segoe UI Medium",sans-serif; */
+        /* font-family:"Tahoma",sans-serif; */
+        /* font-family:"Source Sans Pro",sans-serif; */
+        /* font-family:"Georgia",sans-serif; */
+        font-family:"Open Sans",sans-serif;
         background-color: #d0e0f8;
-        font-family: "Roboto", sans-serif;
+    }
+    p {
+        font-size: 20px
+    }
+    li {
+        font-size: 20px
+    }
+    img {
+        /* float: left; */
+        margin: 2px;
     }
 </style>
 <body>
-    <h1 id="home">Website Devan</h1>
-    <p>Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.</p>
-    <p>Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.</p>
-    <p>Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan</p>
-    <p>Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.5.</p>
+    <font id="home" size="6" color="#002080"><b>BLOG DAN CERITA</b></font>
+    <p>
+    Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.<br>
+    Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.<br>
+    Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan<br>
+    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.5.
+    </p>
     <p style="color:#000080;"><b>Link program:</b></p>
     <ul>
         <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
@@ -57,7 +74,7 @@
     <p>[Coming Soon]</p>
     <br>
     <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 1 Agustus 2023</p>
+    <p>Terakhir diupdate: 15 Agustus 2023</p>
     <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
