--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     }
 </style>
 <body>
-    <font id="home" size="6" color="#002080"><b>BLOG DAN CERITA</b></font>
+    <font id="home" size="6" color="#002080"><b>WEBSITE DEVAN</b></font>
     <p>
     Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.<br>
     Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.<br>
     Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan<br>
-    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.5.
+    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.6.
     </p>
     <p style="color:#000080;"><b>Link program:</b></p>
     <ul>
