--- a/index.html
+++ b/index.html
@@ -19,20 +19,23 @@
     li {
         font-size: 20px
     }
+    a {
+        font-size: 20px
+    }
     img {
         /* float: left; */
         margin: 2px;
     }
 </style>
 <body>
-    <font id="home" size="6" color="#002080"><b>WEBSITE DEVAN</b></font>
+    <font id="home" size="6" color="#004080"><b>WEBSITE DEVAN</b></font>
     <p>
     Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.<br>
     Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.<br>
     Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan<br>
-    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.6.
+    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.5.
     </p>
-    <p style="color:#000080;"><b>Link program:</b></p>
+    <p style="font-size:22px; color:#000080;"><b>Link program:</b></p>
     <ul>
         <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
         <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
@@ -45,19 +48,19 @@
     </ul>
     <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p>
     <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
-    <p style="color:#000080;"><b>Link yang akan datang:</b></p>
+    <p style="font-size:22px; color:#000080;"><b>Link yang akan datang:</b></p>
     <ul>
-        <li>Transformasi (Python) - Ada di program Geometri</li>
         <li>Pengukur (Python) - Sedang Dibuat</li>
+        <li>Foto dan Kenangan (HTML)</li>
         <li>Sejarah (HTML)</li>
         <li>Gambar (HTML)</li>
         <li>Pelajaran (HTML & Python)</li>
         <li>Bangun 3 Dimensi (Python)</li>
         <li>Labirin / Maze (HTML & Python)</li>
-        <li>Portofolio (HTML)</li>
+        <li>Portofolio (HTML) - Mau dibuat</li>
         <li>Explore (HTML & Python)</li>
     </ul>
-    <p style="color:#000080;"><b>Link luar:</b></p>
+    <p style="font-size:22px; color:#000080;"><b>Link luar:</b></p>
     <ul>
         <li><a href="https://www.python.org/">Website Python</a> - Bisa Download Python!</li>
         <li><a href="https://www.geeksforgeeks.org/">Belajar Python</a></li>
@@ -67,14 +70,15 @@
     <p>
         Home |
         <a href="profil.html">Profil</a> |
-        <a href="about.html">About</a> |
         <a href="blog.html">Blog</a> |
+        <a href="fakta.html">Fakta</a> |
+        <a href="about.html">About</a> |
         Sejarah (Coming Soon)
     </p>
     <p>[Coming Soon]</p>
     <br>
     <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 15 Agustus 2023</p>
+    <p>Terakhir diupdate: 16 Agustus 2023</p>
     <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
