--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         /* font-family:"Tahoma",sans-serif; */
         /* font-family:"Source Sans Pro",sans-serif; */
         /* font-family:"Georgia",sans-serif; */
+        /* font-family:"FreeSans",sans-serif; */
         font-family:"Open Sans",sans-serif;
         background-color: #d0e0f8;
     }
@@ -26,16 +27,24 @@
         /* float: left; */
         margin: 2px;
     }
+    .container {
+        /* margin-block-start: 20px; */
+        background-color: #c4d0f4;
+        max-width: 1000px;
+        padding-left: 20px;
+        border: 2px solid black;
+        box-sizing: border-box;
+    }
 </style>
 <body>
-    <font id="home" size="6" color="#004080"><b>WEBSITE DEVAN</b></font>
+    <font id="home" size="7" color="#004080"><b>Website Devan</b></font>
     <p>
     Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.<br>
     Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.<br>
     Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan<br>
-    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.5.
+    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.6.
     </p>
-    <p style="font-size:22px; color:#000080;"><b>Link program:</b></p>
+    <p style="font-size:25px; color:#000080;"><b>Link program:</b></p>
     <ul>
         <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
         <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
@@ -48,7 +57,7 @@
     </ul>
     <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p>
     <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
-    <p style="font-size:22px; color:#000080;"><b>Link yang akan datang:</b></p>
+    <p style="font-size:25px; color:#000080;"><b>Link yang akan datang:</b></p>
     <ul>
         <li>Pengukur (Python) - Sedang Dibuat</li>
         <li>Foto dan Kenangan (HTML)</li>
@@ -60,25 +69,29 @@
         <li>Portofolio (HTML) - Mau dibuat</li>
         <li>Explore (HTML & Python)</li>
     </ul>
-    <p style="font-size:22px; color:#000080;"><b>Link luar:</b></p>
+    <p style="font-size:25px; color:#000080;"><b>Link luar:</b></p>
     <ul>
         <li><a href="https://www.python.org/">Website Python</a> - Bisa Download Python!</li>
         <li><a href="https://www.geeksforgeeks.org/">Belajar Python</a></li>
         <li><a href="https://www.w3schools.com/">Belajar HTML</a></li>
     </ul>
-    <h3>Link:</h3>
-    <p>
-        Home |
+    <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+    <div class="container">
+        <p>
+        Link halaman:<br>
+        <!-- <b>Home</b> -->
+        <b>Home</b> |
         <a href="profil.html">Profil</a> |
         <a href="blog.html">Blog</a> |
         <a href="fakta.html">Fakta</a> |
         <a href="about.html">About</a> |
         Sejarah (Coming Soon)
-    </p>
+        </p>
+    </div>
     <p>[Coming Soon]</p>
     <br>
     <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 16 Agustus 2023</p>
+    <p>Terakhir diupdate: 20 Agustus 2023</p>
     <p>Copyright © 2023 by Devan</p>
 </body>
 </html>
