--- a/blog.html
+++ b/blog.html
@@ -168,9 +168,9 @@
         <p>
         Link halaman:<br>
         <!-- <b>Home</b> -->
-        <b>Home</b> |
+        <a href="index.html">Home</a> |
         <a href="profil.html">Profil</a> |
-        <a href="blog.html">Blog</a> |
+        <b>Blog</b> |
         <a href="fakta.html">Fakta</a> |
         <a href="about.html">About</a> |
         Sejarah (Coming Soon)
