--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Website Saya</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
     body {
@@ -12,7 +14,28 @@
         /* font-family:"Georgia",sans-serif; */
         /* font-family:"FreeSans",sans-serif; */
         font-family:"Open Sans",sans-serif;
+        /* background-color: #d0e0f8; */
+        
+        background-image: url('images/dark-cubes-texture.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+        /* margin: 30px; */
+        margin: 0;
+    }
+    .top-container {
+        background-color: #105090;
+        padding: 10px;
+        
+    }
+    /* .margin-left */
+    .container {
+        /* margin-left: 30px; Sesuaikan dengan nilai yang diinginkan */
+        /* margin:0 auto; */
+        margin:0 auto; /* this will center the page */
+        width:80%; /*  use your width here */
         background-color: #d0e0f8;
+        padding: 0 20px;
     }
     p {
         font-size: 20px;
@@ -52,64 +75,71 @@
     }
 </style>
 <body>
-    <font id="home" size="7" color="#004080"><b>Website Devan</b></font>
-    <p>
-    Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.<br>
-    Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.<br>
-    Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan<br>
-    Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.6.
-    </p>
-    <p style="font-size:25px; color:#000080;"><b>Link program:</b></p>
-    <ul>
-        <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
-        <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
-        <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
-        <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.5</li>
-        <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
-        <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
-        <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
-        <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
-    </ul>
-    <!-- <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p> -->
-    <p>Program baru: <b>Fakta dan Informasi</b>, <b>Blog dan Cerita</b> dan <b>Equation Solver</b></p>
-    <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
-    <p style="font-size:25px; color:#000080;"><b>Link yang akan datang:</b></p>
-    <ul>
-        <li>Pengukur (Python) - Sedang Dibuat</li>
-        <li>Foto dan Kenangan (HTML)</li>
-        <li>Sejarah (HTML)</li>
-        <li>Gambar (HTML)</li>
-        <li>Pelajaran (HTML & Python)</li>
-        <li>Bangun 3 Dimensi (Python)</li>
-        <li>Labirin / Maze (HTML & Python)</li>
-        <li>Portofolio (HTML) - Mau dibuat</li>
-        <li>Explore (HTML & Python)</li>
-    </ul>
-    <p style="font-size:25px; color:#000080;"><b>Link luar:</b></p>
-    <ul>
-        <li><a href="https://www.python.org/">Website Python</a> - Bisa Download Python!</li>
-        <li><a href="https://www.geeksforgeeks.org/">Belajar Python</a></li>
-        <li><a href="https://www.w3schools.com/">Belajar HTML</a></li>
-        <li><a href="https://www.wolframalpha.com/">Website Matematika</a> - Bisa menyelesaikan soalnya</li>
-    </ul>
-    <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-    <div class="box">
-        <p>
-        Link halaman:<br>
-        <!-- <b>Home</b> -->
-        <b>Home</b> |
-        <a class="button" href="profil.html">Profil</a> |
-        <a class="button" href="blog.html">Blog</a> |
-        <a class="button" href="fakta.html">Fakta</a> |
-        <a class="button" href="about.html">About</a> |
-        Sejarah (Coming Soon)
-        </p>
+    <div class="top-container">
+        <font id="home" size="6" color="white"><b>SEBUAH WEBSITE</b></font>
     </div>
-    <p>[Coming Soon]</p>
-    <br>
-    <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 21 Agustus 2023</p>
-    <p>Version: 1.5</p>
-    <p>Copyright © 2023 by Devan</p>
+    <div class="container">
+        <br>
+        <font id="home" size="7" color="#004080"><b>Website Devan</b></font>
+        <p>
+        Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.<br>
+        Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.<br>
+        Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan<br>
+        Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.6.
+        </p>
+        <p style="font-size:25px; color:#000080;"><b>Link program:</b></p>
+        <ul>
+            <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
+            <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
+            <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
+            <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.5</li>
+            <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
+            <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
+            <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
+            <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
+        </ul>
+        <!-- <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p> -->
+        <p>Program baru: <b>Fakta dan Informasi</b>, <b>Blog dan Cerita</b> dan <b>Equation Solver</b></p>
+        <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
+        <p style="font-size:25px; color:#000080;"><b>Link yang akan datang:</b></p>
+        <ul>
+            <li>Pengukur (Python) - Sedang Dibuat</li>
+            <li>Foto dan Kenangan (HTML)</li>
+            <li>Sejarah (HTML)</li>
+            <li>Gambar (HTML)</li>
+            <li>Pelajaran (HTML & Python)</li>
+            <li>Bangun 3 Dimensi (Python)</li>
+            <li>Labirin / Maze (HTML & Python)</li>
+            <li>Portofolio (HTML) - Mau dibuat</li>
+            <li>Explore (HTML & Python)</li>
+        </ul>
+        <p style="font-size:25px; color:#000080;"><b>Link luar:</b></p>
+        <ul>
+            <li><a href="https://www.python.org/">Website Python</a> - Bisa Download Python!</li>
+            <li><a href="https://www.geeksforgeeks.org/">Belajar Python</a></li>
+            <li><a href="https://www.w3schools.com/">Belajar HTML</a></li>
+            <li><a href="https://www.wolframalpha.com/">Website Matematika</a> - Bisa menyelesaikan soalnya</li>
+        </ul>
+        <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box">
+            <p>
+            Link halaman:<br>
+            <!-- <b>Home</b> -->
+            <b>Home</b> |
+            <a class="button" href="profil.html">Profil</a> |
+            <a class="button" href="blog.html">Blog</a> |
+            <a class="button" href="fakta.html">Fakta</a> |
+            <a class="button" href="about.html">About</a> |
+            Sejarah (Coming Soon)
+            </p>
+        </div>
+        <p>[Coming Soon]</p>
+        <br>
+        <a href="#home">Kembali ke awal</a>
+        <p>Terakhir diupdate: 24 Agustus 2023</p>
+        <p>Version: 1.6</p>
+        <p>Copyright © 2023 by Devan</p>
+        <br>
+    </div>
 </body>
 </html>
