--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         margin: 0;
     }
     .top-container {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
         background-color: #105090;
         padding: 10px;
-        
     }
     /* .margin-left */
     .container {
@@ -76,7 +78,7 @@
 </style>
 <body>
     <div class="top-container">
-        <font id="home" size="6" color="white"><b>SEBUAH WEBSITE</b></font>
+        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
     </div>
     <div class="container">
         <br>
@@ -103,9 +105,10 @@
         <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
         <p style="font-size:25px; color:#000080;"><b>Link yang akan datang:</b></p>
         <ul>
-            <li>Pengukur (Python) - Sedang Dibuat</li>
+            <li>Pengukur (Python) - Sedang dibuat</li>
+            <li>Fakta dan Informasi (HTML) - Sedang dibuat</li>
+            <li>Timeline dan Sejarah (HTML)</li>
             <li>Foto dan Kenangan (HTML)</li>
-            <li>Sejarah (HTML)</li>
             <li>Gambar (HTML)</li>
             <li>Pelajaran (HTML & Python)</li>
             <li>Bangun 3 Dimensi (Python)</li>
@@ -130,13 +133,13 @@
             <a class="button" href="blog.html">Blog</a> |
             <a class="button" href="fakta.html">Fakta</a> |
             <a class="button" href="about.html">About</a> |
-            Sejarah (Coming Soon)
+            Timeline (Coming Soon)
             </p>
         </div>
         <p>[Coming Soon]</p>
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 24 Agustus 2023</p>
+        <p>Terakhir diupdate: 25 Agustus 2023</p>
         <p>Version: 1.6</p>
         <p>Copyright © 2023 by Devan</p>
         <br>
